# miniddns

./: Cargo.toml  README.md  miniddns
src/: crypto.rs  hosts.rs  main.rs
tests/: hosts1
